--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Path to Calm",
+  "name": "Path to Calm • Guided Breathing",
   "short_name": "Path to Calm",
   "start_url": "index.html",
   "display": "standalone",
@@ -7,12 +7,12 @@
   "theme_color": "#8ecae6",
   "icons": [
     {
-      "src": "images/icon-192.png",
+      "src": "images/favicon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icon-512.png",
+      "src": "images/favicon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
